# spbpu_is_homeworks

./: pyproject.toml
04/: KBSPARQL.n3  Practice-SPARQL.py
06/: homework_text.txt
