[tool.poetry]
name = "intelligent systems homeworks"
version = "0.1.0"
description = "intelligent_systems"
authors = ["Yury Borodich <xkxixnxgx@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.2"
rdflib = "6.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
